--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.5",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cassandra-driver": "^4.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
+    "redis": "^4.6.13",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
